--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         trabalhar em equipe, ter raciocínio rápido e conhecimentos sólidos nas Ciências Exatas. 
         Os tipos de formação para o curso de Engenharia Mecânica são: bacharelado e pós-graduação. </p>
 
-        <img src="../profissoes/img/sobre2.png" alt="Sob2" id="tamsob2">
+        <img src="../img/sobre2.png" alt="Sob2" id="tamsob2">
 
     </div>
 
