--- a/index.html
+++ b/index.html
@@ -431,8 +431,8 @@
   <div id="usp" class="card" >
     <img id="img-usp" class="card-img-top" src="../profissoes/img/usp.jpg" alt="Card image">
     <div class="card-body">
-      <h4 class="card-title">Unicamp</h4>
-      <p class="card-text">Universidade Estadual de Campinas é uma universidade pública do estado de São Paulo, Brasil</p>
+      <h4 class="card-title">Usp</h4>
+      <p class="card-text">A Universidade de São Paulo é a maior e mais importante universidade pública do Brasil, uma das mais importantes da Ibero-América</p>
       <a href="https://www5.usp.br/ensino/graduacao/cursos-oferecidos/engenharia-mecanica/" class="btn btn-primary">Clique Aqui!</a>
     </div>
   </div>
@@ -441,8 +441,8 @@
   <div id="usf" class="card" >
     <img id="img-usf" class="card-img-top" src="../profissoes/img/usf.png" alt="Card image">
     <div class="card-body">
-      <h4 class="card-title">Unicamp</h4>
-      <p class="card-text">Universidade Estadual de Campinas é uma universidade pública do estado de São Paulo, Brasil</p>
+      <h4 class="card-title">Usf</h4>
+      <p class="card-text">Universidade de São Francisco</p>
       <a href="https://www.usf.edu.br/vestibular/curso.vm?curso=Engenharia+Mecanica&id=521E05" class="btn btn-primary">Clique Aqui!</a>
     </div>
   </div>
@@ -451,8 +451,8 @@
   <div id="anhanguera" class="card" >
     <img id="img-anhanguera" class="card-img-top" src="../profissoes/img/anhanguera.png" alt="Card image">
     <div class="card-body">
-      <h4 class="card-title">Unicamp</h4>
-      <p class="card-text">Universidade Estadual de Campinas é uma universidade pública do estado de São Paulo, Brasil</p>
+      <h4 class="card-title">Anhanguera</h4>
+      <p class="card-text">A faculdade Anhanguera foi fundada em 1994, em Leme (SP), buscando dialogar com uma juventude trabalhadora</p>
       <a href="https://www.anhanguera.com/curso/engenharia-mecanica/?utm_source=google&utm_medium=cpc&utm_campaign=AEDU-Presencial::L3::Display::Performance-Max::Cursos-LTV::Roas&gclid=Cj0KCQjwxb2XBhDBARIsAOjDZ37U5rqzLyd-bYBPwpO53BA6Dyzu_8eJUsfoXt4xcfFqffNFp1opTRkaAoaBEALw_wcB&gclsrc=aw.ds" class="btn btn-primary">Clique Aqui!</a>
     </div>
   </div>
