--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         atua em diversas indústrias, entre elas a de automóveis, aeronáutica e naval.</p>
         
 
-        <img src="../profissoes/img/sobre1.jpg" alt="Sob" id="tamsob">
+        <img src="img/sobre1.jpg" alt="Sob" id="tamsob">
 
     </div>
 
