--- a/postagem.html
+++ b/postagem.html
@@ -8,25 +8,10 @@
     <title>Blog</title>
 </head>
 <body>
- <table border="0">
-    <thead>
-        <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
+    <div class="container-fluid mb-5 col-10 justify-content-center align-items-center position-relative" id="noticias" style="transform: translateY(70px)">
         <script>
             funcaoPostagem();
         </script>
-    </tbody>
-    <tfoot>
-        <tr>
-            <td></td>
-        </tr>
-    </tfoot>
- </table>   
+    </div>
 </body>
 </html>
