--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <!-- The slideshow/carousel -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../profissoes/img/mecanica1.jpg" alt="Eng" id="tamimg">
+      <img src="img/mecanica1.jpg" alt="Eng" id="tamimg">
     </div>
 
   </div>
