--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         atua em diversas indústrias, entre elas a de automóveis, aeronáutica e naval.</p>
         
 
-        <img src="../profissoes/img/sobre1.jpg" alt="Sob" id="tamsob">
+        <img src="img/sobre1.jpg" alt="Sob" id="tamsob">
 
     </div>
 
